2003-09-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-nonunix-install): Use icons30 for XEmacs.
	(w3mhack-make-package): Use icons30.

	* Makefile.in (SUBDIRS): Add icons30.
	(install-icons30): New rule.
	(install-package, install-package-ja): Use it.

	* icons/*.xpm: Shrink the size of all icons.
	* icons30/: Old icons are here.

2003-09-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el (w3m-history-backward): Return nil if there is no
	previous element.

	* w3m.el (w3m-view-previous-page): Skip the current page if it
	seems broken; warn if there's no more history.
	(w3m-copy-buffer): Use the current history for the url string if
	the current page seems broken.
	(w3m-goto-url): Use `lexical-let' to pass the history position
	data to the asynchronous w3m process.

2003-09-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el (shimbun-sankei-content-start): Improve the
	value to be able to fetch inline images.

2003-09-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el (shimbun-sankei-x-face-alist): New variable.
	(shimbun-get-headers): Fix url for news pages; modify ID string.

2003-09-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el: New file.

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Simplify the
	default regexp and the regexp for the sports group.
	(shimbun-asahi-get-headers): Simplify the regexp for the
	kansai-special group; indicate the jinmin-nippou in subject lines
	in the international group.

2003-09-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-time-parse-string): New function.
	(shimbun-sort-headers): New function.

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-group-table): Simplify
	Japanese group names.
	(shimbun-yomiuri-get-headers): Sort headers.

	* shimbun/sb-slashdot-jp.el
	(shimbun-slashdot-jp-search-comment-head): Replace
	`w3m-time-parse-string' with `shimbun-time-parse-string'.

	* shimbun/sb-nikkei.el (shimbun-nikkei-get-headers): Sort headers.
